--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.1",
+  "version": "0.0.4",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -31,21 +31,22 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "vscode-webview-prc",
+  "name": "vscode-webview-rpc",
   "author": "aaronphy",
-  "module": "dist/vscode-webview-prc.esm.js",
+  "module": "dist/vscode-webview-rpc.esm.js",
   "size-limit": [
     {
-      "path": "dist/vscode-webview-prc.cjs.production.min.js",
+      "path": "dist/vscode-webview-rpc.cjs.production.min.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/vscode-webview-prc.esm.js",
+      "path": "dist/vscode-webview-rpc.esm.js",
       "limit": "10 KB"
     }
   ],
   "devDependencies": {
     "@size-limit/preset-small-lib": "^4.10.1",
+    "@types/lodash": "^4.14.168",
     "husky": "^5.1.3",
     "prettier": "2.2.1",
     "size-limit": "^4.10.1",
@@ -54,7 +55,6 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.168",
     "@types/vscode": "^1.54.0",
     "lodash": "^4.17.21"
   }
